--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "subdomain": "revealjs",
   "main": "js/reveal.js",
   "scripts": {
-    "deploy": "NODE_DEBUG=gh-pages node deploy.js",
+    "deploy": "gh-pages -d .",
     "test": "grunt test",
     "start": "grunt serve",
     "build": "grunt"
