--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reveal.js",
+  "name": "12-factor-app",
   "version": "3.6.0",
   "description": "The HTML Presentation Framework",
   "homepage": "http://revealjs.com",
