--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "decktape": "^2.7.0",
     "express": "^4.15.2",
     "gh-pages": "^1.1.0",
     "gitconfig": "^2.0.3",
