only watch src directory

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "create-pdf-local": "decktape reveal http://localhost:1948/src/presentation.md 12-factor-app.pdf",
     "create-pdf": "reveal-md src/presentation.md --theme black --print 12-factor-app.pdf",
     "start": "reveal-md src/presentation.md",
-    "watch": "reveal-md -w src/presentation.md"
+    "watch": "cd src && reveal-md -w presentation.md"
   },
   "author": "Michael Maier",
   "repository": {
