--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "decktape": "^2.7.0",
     "gh-pages": "^1.1.0",
     "gitconfig": "^2.0.3",
+    "phantom": "^4.0.12",
     "reveal-md": "^1.1.3"
   },
   "license": "MIT"
